--- a/sinatra-skeleton-master/Gemfile
+++ b/sinatra-skeleton-master/Gemfile
@@ -3,13 +3,14 @@ source "https://rubygems.org"
 
 gem 'rake'
 gem 'activesupport'
-
+gem 'instagram'
 gem 'sinatra'
 gem 'sinatra-contrib'
 gem 'sinatra-activerecord'
 
 gem 'puma'
 gem 'tux'
+
 
 group :development, :test do
   gem 'pry'
