--- a/sinatra-skeleton-master/Gemfile
+++ b/sinatra-skeleton-master/Gemfile
@@ -1,19 +1,21 @@
 # A sample Gemfile
-source "https://rubygems.org"
-
 gem 'rake'
 gem 'activesupport'
 gem 'instagram'
 gem 'sinatra'
 gem 'sinatra-contrib'
 gem 'sinatra-activerecord'
-
 gem 'puma'
 gem 'tux'
-
 
 group :development, :test do
   gem 'pry'
   gem 'shotgun'
   gem 'sqlite3'
+end
+
+source "https://rubygems.org"
+group :production do
+	gem 'pg'
+	gem 'shotgun'
 end
